fixed the page being too long

--- a/css/style.css
+++ b/css/style.css
@@ -34,9 +34,9 @@ li {
     display: flex;
     background-color:#8a550f64;
     margin-top: 10%;
-    height: 100vh;
+    height: 10vh;
     width: 100%;
-    margin-bottom: 0;   
+    overflow: hidden;
 }
 .madeby{
     margin-bottom: 0;
